--- a/app/package.json
+++ b/app/package.json
@@ -16,7 +16,9 @@
     "expo": "~39.0.2",
     "expo-av": "~8.6.0",
     "expo-camera": "~9.0.0",
+    "expo-image-picker": "^9.1.1",
     "expo-status-bar": "~1.0.2",
+    "expo-video-player": "^1.6.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -27,7 +29,9 @@
     "react-native-screens": "~2.10.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "uuid4": "^2.0.2"
+    "uuid4": "^2.0.2",
+    "@react-native-community/netinfo": "5.9.6",
+    "@react-native-community/slider": "3.0.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
