--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,8 @@
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/netinfo": "5.9.6",
+    "@react-native-community/slider": "3.0.3",
     "@react-navigation/native": "^5.8.6",
     "@react-navigation/stack": "^5.12.3",
     "expo": "~39.0.2",
@@ -27,11 +29,10 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-thumbnail-video": "^0.1.2",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "uuid4": "^2.0.2",
-    "@react-native-community/netinfo": "5.9.6",
-    "@react-native-community/slider": "3.0.3"
+    "uuid4": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
